# sci-dao

./: .gitignore  LICENSE  PLAN.md  README.md  README.zh-CN.md  SciDAO Deck.html  config.yaml  curiosity.py  decomposer.py  demo.html  ledger.py  pyproject.toml  scidao.py
scidao/: __init__.py  __main__.py  cli.py  learner.py  ledger.py  llm.py  server.py
scripts/: run_pipeline.sh
